<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"  android:stretchColumns="*"
    android:background="@drawable/bg_gradient">
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/editID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="18dip"
            android:hint="@string/enter_new_id_number"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            tools:ignore="Autofill" />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/editTimerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="18dip"
            android:hint="@string/enter_new_timer_name"
            tools:ignore="Autofill,TextFields" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/btUpdateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Pick Date" />
    </TableRow>
    <TableRow
        android:id="@+id/viewDateRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:inputType="date"
            android:padding="18dip"
            tools:ignore="Autofill,SpeakableTextPresentCheck" />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btUpdateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Pick Time" />

    </TableRow>
    <TableRow
        android:id="@+id/viewTimeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="date"
            android:padding="18dip"
            tools:ignore="Autofill,SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:hint="Enter New Amount"
            android:padding="18dip"
            tools:ignore="Autofill,TextFields" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="18dip"
            android:hint="@string/enter_new_note"
            tools:ignore="Autofill,TextFields" />
    </TableRow>

    <TableRow
        android:id="@+id/UpdateDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:insetLeft="15dp"
            android:text="@string/update_record"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/delete_record"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
</TableLayout>
